--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rc": "^0.3.4",
     "shelljs": "^0.2.6",
     "yeoman-generator": "~0.16.0"
+    "load-grunt-config": "~0.8.0-beta.1"
   },
   "devDependencies": {
     "mocha": "*"
